[project]
name = "yuefu-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
]

[project.scripts]
yuefu-test = "yuefu_test.cli:app"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
